[project]
name = "msuaccalc"
version = "0.1.0"
description = "Decode Windows userAccountControl flags."
authors = [
  { name = "CobblePot59", email = "cobblepot59@github.com" }
]
repository = "https://github.com/CobblePot59/MSuacCalc"
readme = "README.md"

requires-python = ">=3.9"
dependencies = [
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"